plugins {
	id 'java'
	id("org.springframework.boot") version "3.3.2"
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.lilbaek.simply'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation("org.springframework.boot:spring-boot-starter-web")
	implementation("org.springframework.boot:spring-boot-starter-jdbc")
	implementation("jakarta.persistence:jakarta.persistence-api:3.2.0")

	testImplementation("org.hsqldb:hsqldb")
	testImplementation("org.springframework.boot:spring-boot-starter-test")
}

test {
	useJUnitPlatform()
}
